feat: add api key auth
